<resources>
    <string name="app_name">wwrapp</string>

    <string name="action_settings">Settings</string>
    <string name="enter_walk_info_label_done">Done</string>
    <string name="enter_walk_info_label_cancel">Cancel</string>
    <string name="label_route_name">Route name *</string>
    <string name="hint_route_name">Route name</string>
    <string name="label_starting_point">Starting point</string>
    <string name="hint_starting_point">Starting point</string>
    <string name="title_activity_home_screen">MockHomeScreenActivity</string>
    <string name="home_screen_step_string">Your steps for the day:</string>
    <string name="home_screen_miles_string">Your miles for the day:</string>
    <string name="home_toolbar_string">Home</string>
    <string name="start_new_walk_string">Start new walk/run</string>
    <string name="routes_screen_button_label">Go to Routes</string>
    <string name="plus">+</string>
    <string name="loop">loop</string>
    <string name="out_and_back">out-and-back</string>
    <string name="flat">flat</string>
    <string name="hilly">hilly</string>
...
    <string name="last_walk_time">Last walk\'s time</string>
    <string name="last_walk_distance">Last walk\'s distance</string>

    <string name="mock">mock</string>
    <string name="you_ve_walked">You\'ve walked</string>
    <string name="zero_step">0</string>
    <string name="steps_on_this_walk">Steps on this walk</string>
    <string name="miles_so_far">That\'s 0.0 miles so far</string>
    <string name="zero_hr">0 hr</string>
    <string name="zero_min">0 min</string>
    <string name="zero_sec">0 sec</string>
    <string name="stop_and_save_changes">Stop and save changes</string>
    <string name="add_five_hundred_Steps">Add 500 Steps</string>
    <string name="set_ms">set ms</string>
    <string name="tags">Tags:</string>
    <string name="date">Date:</string>
...
