...
        android:id="@+id/lastWalkTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="84dp"
        android:text="@string/last_walk_time"
        app:layout_constraintBottom_toTopOf="@+id/startNewWalkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lastWalkTime"
...
